test/types/string/bradc/string2complex/badStringToComplex2.good
badStringToComplex2.chpl:3: error: Missing terminating 'i' character when converting from string to complex(64)
