test/types/string/bradc/string2complex/badStringToComplex2.chpl
var s = "1.2+3.4";

var c = s:complex(64);
